--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -15,32 +15,22 @@
             margin: 0;
             background-color: #f0f0f0;
         }
-
-        #video-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
         .video-wrapper {
             position: relative;
+            width: 320px;
+            height: 240px;
             margin: 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
             overflow: hidden;
-            width: 320px; /* Taille fixe pour éviter le plein écran */
-            height: 240px; /* Taille fixe pour éviter le plein écran */
         }
-
-        video {
-            object-fit: contain;
+        video {            
+            object-fit: cover;
             width: 100%;
             height: 100%;
             border: none;
             margin: 0;
         }
-
         .controls {
             position: absolute;
             bottom: 0;
@@ -49,42 +39,40 @@
             color: white;
             text-align: center;
         }
-
-        .controls button {
+        .like-button, .unlike-button {
             background: transparent;
             border: none;
             color: white;
             font-size: 20px;
             cursor: pointer;
-            margin: 5px;
         }
-
+        #video-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            width: 100%;
+            margin-bottom: 20px;
+        }
+        #controls {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+        }
+        .controls button {
+            margin-bottom: 5px;
+        }
         .controls p {
             margin: 0;
-            color: white;
         }
-
         #main-controls {
             display: flex;
-            flex-direction: column;
             align-items: center;
+            flex-direction: column;
             width: 100%;
-            max-width: 800px; /* Ajuster la largeur pour un meilleur ajustement sur les grands écrans */
         }
-
         #main-controls label, #main-controls button {
             margin-bottom: 10px;
-        }
-
-        input[type="text"] {
-            padding: 5px;
-            font-size: 16px;
-        }
-
-        button {
-            padding: 10px;
-            font-size: 16px;
-            cursor: pointer;
         }
     </style>
 </head>
@@ -120,7 +108,6 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
-        <label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -234,7 +221,6 @@
         }
 
         async function updateCameraSelect() {
-            const device = detectDevice();
             const devices = await navigator.mediaDevices.enumerateDevices();
             const videoDevices = devices.filter(device => device.kind === 'videoinput');
             cameraSelect.innerHTML = '';
@@ -247,11 +233,11 @@
                     cameraSelect.appendChild(option);
                 });
 
-            // Restore the previously selected camera
-            const savedCameraId = localStorage.getItem('selectedCameraId');
-            if (savedCameraId) {
-                cameraSelect.value = savedCameraId;
-            }
+                // Restore the previously selected camera
+                const savedCameraId = localStorage.getItem('selectedCameraId');
+                if (savedCameraId) {
+                    cameraSelect.value = savedCameraId;
+                }
             } else {
                 cameraSelect.innerHTML = '<option value="">Aucune caméra détectée</option>';
             }
@@ -259,20 +245,6 @@
                 audio: true,
                 video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
             };
-        }
-
-        function detectDevice() {
-            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            if (/windows phone/i.test(userAgent)) {
-                return "Windows Phone";
-            }
-            if (/android/i.test(userAgent)) {
-                return "Android";
-            }
-            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                return "iOS";
-            }
-            return "unknown";
         }
 
         function applyMicMute() {
@@ -320,14 +292,11 @@
         });
 
         hangupButton.addEventListener('click', () => {
-            if (localStream) {
-                localStream.getTracks().forEach(track => track.stop());
-            }
             if (call) {
                 call.close();
+                removeRemoteVideo(peerIdInput.value.trim());
+                call = null;
             }
-            localVideo.srcObject = null;
-            videoContainer.querySelectorAll('.video-wrapper').forEach(wrapper => wrapper.remove());
         });
 
         muteCheckbox.addEventListener('change', () => {
@@ -338,82 +307,57 @@
             sendMuteSignal(muteRemoteCheckbox.checked);
         });
 
-        function saveSelectedCamera() {
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
-        }
-        async function changeCamera() {
-            const constraints = await updateCameraSelect();
-            if (localStream) {
-                localStream.getTracks().forEach(track => track.stop()); // Arrêter le stream actuel
+        function addRemoteVideo(peerId, remoteStream) {
+            const existingWrapper = document.getElementById(peerId + '-wrapper');
+            if (existingWrapper) {
+                existingWrapper.querySelector('video').srcObject = remoteStream;
+                return;
             }
-            const newStream = await navigator.mediaDevices.getUserMedia(constraints);
-            localStream = newStream;
-            localVideo.srcObject = newStream;
-            applyMicMute();
-        }
-        cameraSelect.addEventListener('change', () => {
-            saveSelectedCamera();
-            getLocalStream().then(stream => {
-                localVideo.srcObject = stream;
+
+            const videoWrapper = document.createElement('div');
+            videoWrapper.classList.add('video-wrapper');
+            videoWrapper.id = peerId + '-wrapper';
+
+            const video = document.createElement('video');
+            video.autoplay = true;
+            video.playsInline = true;
+            video.srcObject = remoteStream;
+
+            const controls = document.createElement('div');
+            controls.classList.add('controls');
+
+            const likeButton = document.createElement('button');
+            likeButton.classList.add('like-button');
+            likeButton.textContent = '❤️';
+            likeButton.addEventListener('click', () => {
+                sendLike(peerId);
             });
-             changeCamera();
-        });
 
-        peerId.addEventListener('input', () => {
-            const command = peerId.value.trim();
-            const unlikeButtons = document.querySelectorAll('.unlike-button');
-            unlikeButtons.forEach(button => {
-                if (command === '!unlike') {
-                    button.style.display = 'block';
-                } else {
-                    button.style.display = 'none';
-                }
+            const unlikeButton = document.createElement('button');
+            unlikeButton.classList.add('unlike-button');
+            unlikeButton.textContent = '⚡';
+            unlikeButton.style.display = 'none';
+            unlikeButton.addEventListener('click', () => {
+                sendUnlike(peerId);
             });
-        });
 
-        function addRemoteVideo(peerId, stream) {
-            if (!document.getElementById(peerId + '-wrapper')) {
-                const videoWrapper = document.createElement('div');
-                videoWrapper.className = 'video-wrapper';
-                videoWrapper.id = peerId + '-wrapper';
-                
-                const videoElement = document.createElement('video');
-                videoElement.id = peerId + 'Video';
-                videoElement.autoplay = true;
-                videoElement.srcObject = stream;
+            const likesCount = document.createElement('p');
+            likesCount.classList.add('likes-count');
+            likesCount.textContent = 'Likes reçus: 0';
 
-                videoWrapper.appendChild(videoElement);
-                
-                const controlsDiv = document.createElement('div');
-                controlsDiv.className = 'controls';
+            const unlikesCount = document.createElement('p');
+            unlikesCount.classList.add('unlikes-count');
+            unlikesCount.textContent = 'Unlikes reçus: 0';
+            unlikesCount.style.display = 'none';
 
-                const likeButton = document.createElement('button');
-                likeButton.className = 'like-button';
-                likeButton.innerText = '❤️';
-                likeButton.addEventListener('click', () => sendLike(peerId));
+            controls.appendChild(likeButton);
+            controls.appendChild(unlikeButton);
+            controls.appendChild(likesCount);
+            controls.appendChild(unlikesCount);
 
-                const unlikeButton = document.createElement('button');
-                unlikeButton.className = 'unlike-button';
-                unlikeButton.innerText = '⚡';
-                unlikeButton.style.display = 'none';
-                unlikeButton.addEventListener('click', () => sendUnlike(peerId));
-
-                const likesCount = document.createElement('p');
-                likesCount.className = 'likes-count';
-                likesCount.innerText = 'Likes reçus: 0';
-
-                const unlikesCount = document.createElement('p');
-                unlikesCount.className = 'unlikes-count';
-                unlikesCount.innerText = 'Unlikes reçus: 0';
-                unlikesCount.style.display = 'none';
-
-                controlsDiv.appendChild(likeButton);
-                controlsDiv.appendChild(unlikeButton);
-                controlsDiv.appendChild(likesCount);
-                controlsDiv.appendChild(unlikesCount);
-
-                videoWrapper.appendChild(controlsDiv);
-                videoContainer.appendChild(videoWrapper);            }
+            videoWrapper.appendChild(video);
+            videoWrapper.appendChild(controls);
+            videoContainer.appendChild(videoWrapper);
         }
 
         function removeRemoteVideo(peerId) {
@@ -423,102 +367,45 @@
             }
         }
 
+        function sendLike(peerId) {
+            const conn = peer.connections[peerId]?.[0];
+            if (conn) {
+                conn.send({ type: 'like' });
+            }
+        }
+
+        function sendUnlike(peerId) {
+            const conn = peer.connections[peerId]?.[0];
+            if (conn) {
+                conn.send({ type: 'unlike' });
+            }
+        }
+
         function updateLikesCount(peerId) {
             const videoWrapper = document.getElementById(peerId + '-wrapper');
             if (videoWrapper) {
-                const likesCount = videoWrapper.querySelector('.likes-count');
-                if (likesCount) {
-                    likesCount.innerText = `Likes reçus: ${likedUsers[peerId] || 0}`;
-                }
+                const likesCountElem = videoWrapper.querySelector('.likes-count');
+                likesCountElem.textContent = `Likes reçus: ${likedUsers[peerId] || 0}`;
             }
         }
 
         function updateUnlikesCount(peerId) {
             const videoWrapper = document.getElementById(peerId + '-wrapper');
             if (videoWrapper) {
-                const unlikesCount = videoWrapper.querySelector('.unlikes-count');
-                if (unlikesCount) {
-                    unlikesCount.innerText = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-                    if (unlikedUsers[peerId] > 0) {
-                        unlikesCount.style.display = 'block';
-                    }
-                }
-                localStorage.setItem('excludedUser', senderId);
-                setTimeout(() => {
-                    if (localStorage.getItem('excludedUser') === senderId) {
-                        document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-                        throw new Error("L'utilisateur est exclu");
-                    }
-                }, 5000);
+                const unlikesCountElem = videoWrapper.querySelector('.unlikes-count');
+                unlikesCountElem.textContent = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
             }
         }
 
-        function sendLike(peerId) {
-            const conn = peer.connect(peerId);
-            conn.on('open', () => {
-                conn.send({ type: 'like' });
-            });
-        }
-
-        function sendUnlike(peerId) {
-            const conn = peer.connect(peerId);
-            conn.on('open', () => {
-                conn.send({ type: 'unlike' });
-                setTimeout(() => {
-                    removeRemoteVideo(peerId);
-                    if (call && call.peer === peerId) {
-                        call.close();
-                    }
-                }, 5000);
-            });
-        }
-
-        updateCameraSelect();
-
-(async function initialize() {
-            await updateCameraSelect();
-            const storedCameraId = localStorage.getItem('selectedCameraId');
-            if (storedCameraId) {
-                cameraSelect.value = storedCameraId;
+        cameraSelect.addEventListener('change', async () => {
+            const constraints = await updateCameraSelect();
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop());
             }
-        })();
-
-        function handleLike(senderId) {
-            if (!likedUsers[senderId]) {
-                likedUsers[senderId] = 1;
-            } else {
-                likedUsers[senderId]++;
-            }
-            updateLikeCounts(senderId);
-        }
-
-        function handleUnlike(senderId) {
-            if (!unlikedUsers[senderId]) {
-                unlikedUsers[senderId] = 1;
-            } else {
-                unlikedUsers[senderId]++;
-            }
-            updateLikeCounts(senderId);
-            localStorage.setItem('excludedUser', senderId);
-            setTimeout(() => {
-                if (localStorage.getItem('excludedUser') === senderId) {
-                    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-                    throw new Error("L'utilisateur est exclu");
-                }
-            }, 5000);
-        }
-
-        function updateLikeCounts(peerId) {
-            const videoWrapper = document.getElementById(`videoWrapper-${peerId}`);
-            if (videoWrapper) {
-                const likeCount = likedUsers[peerId] || 0;
-                const unlikeCount = unlikedUsers[peerId] || 0;
-                videoWrapper.querySelector('.like-count').textContent = `Likes: ${likeCount}`;
-                videoWrapper.querySelector('.unlike-count').textContent = `Unlikes: ${unlikeCount}`;
-            }
-        }
-
-        setInterval(() => {
+            getLocalStream();
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
+        });
+                setInterval(() => {
             if (localStorage.getItem('excludedUser')) {
                 document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
                 throw new Error("L'utilisateur est exclu");
