--- a/WebCam_V2.html
+++ b/WebCam_V2.html
@@ -15,18 +15,43 @@
             margin: 0;
             background-color: #f0f0f0;
         }
+        .video-wrapper {
+            position: relative;
+            width: 320px;
+            height: 240px;
+            margin: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+        video {            
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            border: none;
+            margin: 0;
+        }
+        .controls {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            text-align: center;
+        }
+        .like-button, .unlike-button {
+            background: transparent;
+            border: none;
+            color: white;
+            font-size: 20px;
+            cursor: pointer;
+        }
         #video-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            width: 80%;
+            width: 100%;
             margin-bottom: 20px;
-        }
-        video {
-            max-width: 40%;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin: 5px;
         }
         #controls {
             display: flex;
@@ -34,16 +59,34 @@
             flex-direction: column;
             width: 100%;
         }
-        #controls label, #controls button {
+        .controls button {
+            margin-bottom: 5px;
+        }
+        .controls p {
+            margin: 0;
+        }
+        #main-controls {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+        }
+        #main-controls label, #main-controls button {
             margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
     <div id="video-container">
-        <video id="localVideo" autoplay playsinline muted></video>
+        <div class="video-wrapper" id="local-wrapper">
+            <video id="localVideo" autoplay playsinline muted></video>
+            <div class="controls">     
+                <button class="unlike-button" style="display: none;">⚡</button>
+                <p class="unlikes-count" style="display: none;">Unlikes reçus: 0</p>
+            </div>
+        </div>
     </div>
-    <div id="controls">
+    <div id="main-controls">
         <label>
             Mon ID :
             <input type="text" id="myId" readonly>
@@ -65,8 +108,6 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
-        <button id="likeButton">❤️</button>
-        <p id="likesCount">Likes reçus: 0</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -74,10 +115,10 @@
         let localStream;
         let peer;
         let call;
-        let validUsers = [];
         let likedUsers = {};
+        let unlikedUsers = {};
         let lastCallerId = '';
-        let peerConnections = {};  // Pour gérer les connexions avec les pairs
+        let peerConnections = {};
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
@@ -88,8 +129,6 @@
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
-        const likeButton = document.getElementById('likeButton');
-        const likesCount = document.getElementById('likesCount');
         const videoContainer = document.getElementById('video-container');
 
         generateMyIdButton.addEventListener('click', () => {
@@ -140,7 +179,23 @@
                         } else {
                             likedUsers[senderId]++;
                         }
-                        updateLikesCount();
+                        updateLikesCount(senderId);
+                    } else if (data.type === 'unlike') {
+                        const senderId = conn.peer;
+                        localStorage.setItem('excludedUser', senderId);
+                        setTimeout(() => {
+                            if (localStorage.getItem('excludedUser') === senderId) {
+                                document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                                throw new Error("L'utilisateur est exclu");
+                            }
+                        }, 5000);
+                        if (!unlikedUsers[senderId]) {
+                            unlikedUsers[senderId] = 1;
+                        } else {
+                            unlikedUsers[senderId]++;
+                        }
+                        updateUnlikesCount(senderId);
+
                     }
                 });
             });
@@ -151,10 +206,7 @@
         }
 
         async function getLocalStream() {
-            const constraints = {
-                audio: true,
-                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
-            };
+            const constraints = await updateCameraSelect();
             return navigator.mediaDevices.getUserMedia(constraints)
                 .then(stream => {
                     localStream = stream;
@@ -174,13 +226,25 @@
             cameraSelect.innerHTML = '';
 
             if (videoDevices.length > 0) {
-                videoDevices.forEach(device => {
+                videoDevices.forEach((device, index) => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
-                    option.text = device.label || `Caméra ${cameraSelect.length + 1}`;
+                    option.text = `Caméra ${index + 1}`;
                     cameraSelect.appendChild(option);
                 });
+
+                // Restore the previously selected camera
+                const savedCameraId = localStorage.getItem('selectedCameraId');
+                if (savedCameraId) {
+                    cameraSelect.value = savedCameraId;
+                }
+            } else {
+                cameraSelect.innerHTML = '<option value="">Aucune caméra détectée</option>';
             }
+            return {
+                audio: true,
+                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
+            };
         }
 
         function applyMicMute() {
@@ -228,14 +292,11 @@
         });
 
         hangupButton.addEventListener('click', () => {
-            if (localStream) {
-                localStream.getTracks().forEach(track => track.stop());
-            }
             if (call) {
                 call.close();
+                removeRemoteVideo(peerIdInput.value.trim());
+                call = null;
             }
-            localVideo.srcObject = null;
-            videoContainer.querySelectorAll('video').forEach(video => video.remove());
         });
 
         muteCheckbox.addEventListener('change', () => {
@@ -245,72 +306,172 @@
         muteRemoteCheckbox.addEventListener('change', () => {
             sendMuteSignal(muteRemoteCheckbox.checked);
         });
-
-        cameraSelect.addEventListener('change', async () => {
+        function saveSelectedCamera() {
             localStorage.setItem('selectedCameraId', cameraSelect.value);
-            if (localStream) {
-                const videoTracks = localStream.getVideoTracks();
-                videoTracks.forEach(track => track.stop());
-            }
-            await getLocalStream();
-        });
-
-        likeButton.addEventListener('click', () => {
-            if (call) {
-                const conn = peer.connect(call.peer);
-                conn.on('open', () => {
-                    conn.send({ type: 'like' });
-                });
-            }
-        });
-
-        function updateLikesCount() {
-            const totalLikes = Object.values(likedUsers).reduce((acc, count) => acc + count, 0);
-            likesCount.textContent = `Likes reçus: ${totalLikes}`;
         }
-
-        function addRemoteVideo(peerId, remoteStream) {
-            if (!peerConnections[peerId]) {
-                const video = document.createElement('video');
-                video.autoplay = true;
-                video.playsInline = true;
-                video.srcObject = remoteStream;
-                video.id = `remoteVideo-${peerId}`;
-                videoContainer.appendChild(video);
-                peerConnections[peerId] = remoteStream;
-
-                // Vérifie et ajoute des vidéos lorsque le nombre de vidéos est inférieur à 2
-                checkAndAddVideos();
+        async function changeCamera() {
+            const constraints = await updateCameraSelect();
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop()); // Arrêter le stream actuel
             }
+            const newStream = await navigator.mediaDevices.getUserMedia(constraints);
+            localStream = newStream;
+            localVideo.srcObject = newStream;
+            applyMicMute();
+        }
+        cameraSelect.addEventListener('change', () => {
+            saveSelectedCamera();
+            getLocalStream().then(stream => {
+                localVideo.srcObject = stream;
+            });
+             changeCamera();
+        });
+        peerId.addEventListener('input', () => {
+            const command = peerId.value.trim();
+            const unlikeButtons = document.querySelectorAll('.unlike-button');
+            unlikeButtons.forEach(button => {
+                if (command === '!unlike') {
+                    button.style.display = 'block';
+                } else {
+                    button.style.display = 'none';
+                }
+            });
+        });
+        function addRemoteVideo(peerId, remoteStream) {
+            const existingWrapper = document.getElementById(peerId + '-wrapper');
+            if (existingWrapper) {
+                existingWrapper.querySelector('video').srcObject = remoteStream;
+                return;
+            }
+
+            const videoWrapper = document.createElement('div');
+            videoWrapper.classList.add('video-wrapper');
+            videoWrapper.id = peerId + '-wrapper';
+
+            const video = document.createElement('video');
+            video.autoplay = true;
+            video.playsInline = true;
+            video.srcObject = remoteStream;
+
+            const controls = document.createElement('div');
+            controls.classList.add('controls');
+
+            const likeButton = document.createElement('button');
+            likeButton.classList.add('like-button');
+            likeButton.textContent = '❤️';
+            likeButton.addEventListener('click', () => {
+                sendLike(peerId);
+            });
+
+            const unlikeButton = document.createElement('button');
+            unlikeButton.classList.add('unlike-button');
+            unlikeButton.textContent = '⚡';
+            unlikeButton.style.display = 'none';
+            unlikeButton.addEventListener('click', () => {
+                sendUnlike(peerId);
+            });
+
+            const likesCount = document.createElement('p');
+            likesCount.classList.add('likes-count');
+            likesCount.textContent = 'Likes reçus: 0';
+
+            const unlikesCount = document.createElement('p');
+            unlikesCount.classList.add('unlikes-count');
+            unlikesCount.textContent = 'Unlikes reçus: 0';
+            unlikesCount.style.display = 'none';
+
+            controls.appendChild(likeButton);
+            controls.appendChild(unlikeButton);
+            controls.appendChild(likesCount);
+            controls.appendChild(unlikesCount);
+
+            videoWrapper.appendChild(video);
+            videoWrapper.appendChild(controls);
+            videoContainer.appendChild(videoWrapper);
         }
 
         function removeRemoteVideo(peerId) {
-            const video = document.getElementById(`remoteVideo-${peerId}`);
-            if (video) {
-                video.remove();
-                delete peerConnections[peerId];
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                videoWrapper.remove();
             }
         }
 
-        function checkAndAddVideos() {
-            const peerIds = Object.keys(peerConnections);
-            if (peerIds.length < 2) {
-                peerIds.forEach(id => {
-                    if (!document.getElementById(`remoteVideo-${id}`)) {
-                        //
+        function sendLike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'like' });
+            });
+        }
+
+        function sendUnlike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'unlike' });
+                setTimeout(() => {
+                    removeRemoteVideo(peerId);
+                    if (call && call.peer === peerId) {
+                        call.close();
                     }
-                });
+                }, 5000);
+            });
+        }
+
+        function updateLikesCount(peerId) {
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                const likesCount = videoWrapper.querySelector('.likes-count');
+                if (likesCount) {
+                    likesCount.innerText = `Likes reçus: ${likedUsers[peerId] || 0}`;
+                }
             }
         }
 
-        // Charger les caméras lors du chargement de la page
-        (async function initialize() {
-            await updateCameraSelect();
-            const storedCameraId = localStorage.getItem('selectedCameraId');
-            if (storedCameraId) {
-                cameraSelect.value = storedCameraId;
+        function updateUnlikesCount(peerId) {
+            const videoWrapper = document.getElementById(peerId + '-wrapper');
+            if (videoWrapper) {
+                const unlikesCount = videoWrapper.querySelector('.unlikes-count');
+                if (unlikesCount) {
+                    unlikesCount.innerText = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
+                    if (unlikedUsers[peerId] > 0) {
+                        unlikesCount.style.display = 'block';
+                    }
+                }
+                localStorage.setItem('excludedUser', senderId);
+                setTimeout(() => {
+                    if (localStorage.getItem('excludedUser') === senderId) {
+                        document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                        throw new Error("L'utilisateur est exclu");
+                    }
+                }, 5000);
             }
-        })();
+        }
+
+        cameraSelect.addEventListener('change', async () => {
+            const constraints = await updateCameraSelect();
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop());
+            }
+            getLocalStream();
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
+        });
+                setInterval(() => {
+            if (localStorage.getItem('excludedUser')) {
+                document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                throw new Error("L'utilisateur est exclu");
+            }
+            Object.keys(peerConnections).forEach(peerId => {
+                updateLikeCounts(peerId);
+            });
+        }, 5000);
+        window.addEventListener('beforeunload', () => {
+            if (localStream) {
+                localStream.getTracks().forEach(track => track.stop());
+            }
+            if (call) {
+                call.close();
+            }
+        });
     </script>
 </body>
 </html>
