--- a/Street_View_Coord.html
+++ b/Street_View_Coord.html
@@ -22,11 +22,14 @@
         .label {
             margin-left: 10px;
         }
+        #mapContainer {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <div id="controls">
-        <input type="text" id="searchBox" placeholder="Search location">
+        <input type="text" id="searchBox" placeholder="Search location or coordinates">
         <button id="returnToStreetViewButton">Return to Street View</button>
         <span class="label" id="latitudeLabel">Latitude: </span>
         <span class="label" id="longitudeLabel">Longitude: </span>
@@ -45,7 +48,7 @@
             const input = document.getElementById('searchBox').value;
             if (isCoordinate(input)) {
                 const { lat, lng } = parseCoordinate(input);
-                openMap(lat, lng);
+                updateOrOpenMap(lat, lng);
             } else {
                 openMapWithAddress(encodeURIComponent(input));
             }
@@ -56,16 +59,16 @@
                 const input = document.getElementById('searchBox').value;
                 if (isCoordinate(input)) {
                     const { lat, lng } = parseCoordinate(input);
-                    openMap(lat, lng);
+                    updateOrOpenMap(lat, lng);
                 } else {
                     openMapWithAddress(encodeURIComponent(input));
                 }
             }
         });
 
-        function openMap(lat = defaultLatitude, lng = defaultLongitude) {
+        function updateOrOpenMap(lat, lng) {
             const url = `https://www.google.com/maps?q=&layer=c&cbll=${lat},${lng}&cbp=11.54,,0,0,-15`;
-            if (mapWindow) {
+            if (mapWindow && !mapWindow.closed) {
                 mapWindow.location.href = url;
             } else {
                 mapWindow = window.open(url, '_blank', 'width=800,height=600');
@@ -74,7 +77,7 @@
 
         function openMapWithAddress(address) {
             const url = `https://www.google.com/maps?q=${address}`;
-            if (mapWindow) {
+            if (mapWindow && !mapWindow.closed) {
                 mapWindow.location.href = url;
             } else {
                 mapWindow = window.open(url, '_blank', 'width=800,height=600');
@@ -113,4 +116,3 @@
     </script>
 </body>
 </html>
-//37°47'07"N 122°23'31"W
