--- a/M3U_LIVE_RECORD_V2.HTML
+++ b/M3U_LIVE_RECORD_V2.HTML
@@ -245,7 +245,7 @@
                 document.getElementById('m3uUrl').value = '';
             }
         }
-
+loadM3uList();
 </script>
 </body>
 </html>
