--- a/Text_Edit.html
+++ b/Text_Edit.html
@@ -126,6 +126,8 @@ body {
     <textarea id="description"></textarea>
 
     <script>
+        // ChatGPT's signature
+        // Generated with assistance from ChatGPT.
         const editor = document.getElementById('editor');
         const description = document.getElementById('description');
         const colorPicker = document.getElementById('colorPicker');
