--- a/Index2025.html
+++ b/Index2025.html
@@ -27,14 +27,15 @@
     <div id="response"></div>
 
     <script>
-        const apiDevKey = 'sCoRRqMCgvCYl6iZm4P5_pH-BxSgFvEe';
-        const username = 'Thunder2025';
-        const password = 'Thunder2024$';
+        const apiDevKey = 'Yn_AsM6V0Rv-b-5uDJu4YvqGTQfnAp7K';
+        const username = 'Thunder2024';
+        const password = 'TypeYourMessage2024';
 
+        const serverUrl = 'https://thunderproxy.glitch.me'; // Remplacez ceci par l'URL de votre serveur
 
         async function getUserKey() {
             try {
-                const response = await fetch('/api/pastebin/api/api_login.php', {
+                const response = await fetch(`${serverUrl}/api/pastebin/api/api_login.php`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
                     body: new URLSearchParams({
@@ -62,7 +63,7 @@
                 const title = document.getElementById('title').value;
                 const content = document.getElementById('content').value;
 
-                const data = await fetch('/api/pastebin/api/api_post.php', {
+                const data = await fetch(`${serverUrl}/api/pastebin/api/api_post.php`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
                     body: new URLSearchParams({
@@ -77,6 +78,9 @@
                 });
 
                 const result = await data.text();
+                if (result.startsWith('Bad API request')) {
+                    throw new Error('API Request Error: ' + result);
+                }
                 document.getElementById('response').textContent = 'Paste Created Successfully: ' + result;
             } catch (error) {
                 document.getElementById('response').textContent = 'Error: ' + error.message;
@@ -93,7 +97,7 @@
                     return;
                 }
 
-                const data = await fetch('/api/pastebin/api/api_post.php', {
+                const data = await fetch(`${serverUrl}/api/pastebin/api/api_post.php`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
                     body: new URLSearchParams({
@@ -105,6 +109,9 @@
                 });
 
                 const result = await data.text();
+                if (result.startsWith('Bad API request')) {
+                    throw new Error('API Request Error: ' + result);
+                }
                 document.getElementById('response').textContent = 'Paste Deleted Successfully: ' + result;
                 loadPublicPasteTitles();
             } catch (error) {
@@ -114,7 +121,7 @@
 
         async function loadPublicPasteTitles() {
             try {
-                const response = await fetch('/api/pastebin/u/Thunder2025');
+                const response = await fetch(`${serverUrl}/api/pastebin/u/Thunder2024`);
                 const text = await response.text();
                 const pattern = /<span class="status -public" title="Public paste, anybody can see this paste."><\/span>\s*<a href="\/([^"]+)">([^<]+)<\/a>/g;
                 let match;
