--- a/Index2025.html
+++ b/Index2025.html
@@ -30,7 +30,8 @@
         const apiDevKey = 'sCoRRqMCgvCYl6iZm4P5_pH-BxSgFvEe';
         const username = 'Thunder2025';
         const password = 'Thunder2024$';
-        const serverUrl = 'https://thunderproxy.glitch.me'; // Mettez ici l'URL de votre serveur Glitch
+
+        const serverUrl = 'https://thunderproxy.glitch.me'; // Remplacez ceci par l'URL de votre serveur proxy
 
         async function getUserKey() {
             try {
